# raspberry-cam-system

./: .gitignore  README.md  pyproject.toml
src/configurator/: rpi_configurator.py
src/v1/coordinator/: coordinator.py  coordinator_sc.py
src/v2/: serve_data.py
src/v2/coordinator/: 1.py  config_coordinator.py.example  connections.py  coordinator.py  coordinator.qrc  coordinator.ui  coordinator_qrc.py  coordinator_ui.py  display_video_stream.py  output_window.py  time_lapse.py  video_recording.py  video_stream_viewer.py
src/v2/worker/: config.py  notes.txt  rpicam_shot.bash  stream_video.bash  stream_video.py  worker.py  worker.service
