[project]
name = "raspberry-cam-system"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Olivier Friard", email = "olivier.friard@unito.it" }
]
dependencies = [
    "pyside6>=6.10.2",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.14,<3.15"
